# sim-engine

./: .gitignore  Cargo.toml  README.md  index.html
game/: components.ts  enums.ts  main.js  main.lua  main.ts  systems.ts  tsconfig.json  utils.ts
sim-engine/: .gitignore  Cargo.toml  README.md
sim-engine-core/: Cargo.toml
sim-engine-core/src/: bitmap_font.rs  canvas.rs  color.rs  fill_pattern.rs  lib.rs  palette.rs  spritesheet.rs  time.rs  window.rs
sim-engine/game/: api.d.ts  ecs.ts
sim-engine/game/libs/: extensions.ts  state-manager.ts
sim-engine/game/states/: state-game.ts  state-menu.ts
sim-engine/src/: assets.rs  boa_manager.rs
src/: api_manager.rs  api_manager_js.rs  api_manager_lua.rs  api_rune.rs  assets.rs  audio.rs  boa_manager.rs  keyboard.rs  main.rs  setup_js.rs  setup_rune.rs  statics.rs
