[package]
name = "sim-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
sim-core = { path = "../sim-engine-core" }
lazy_static = "1.4.0"
log = { version = "0.4" }
rust-embed = "6.4.0"
winit = "0.27"
winit_input_helper = "0.13"
mlua = { version = "0.8", features = ["luau"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"
pollster = "0.2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = "z"

# Enable high optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3 # optimize for speed
lto = true
