[package]
name = "sim-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
bitflags = "1.3"
log = "0.4"
rust-embed = "8.0"
rustc-hash = "1.1"
sim-core = { path = "../sim-engine-core" }
instant = "0.1"
boa_engine = "0.18.0"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = "z"

# Enable high optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3 # optimize for speed
lto = true
