[package]
name = "sim-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
image = "0.24.2"
instant = "0.1"
kira = { version = "0.6.0", default-features = false, features = [
    "cpal",
    "wav",
] }
log = { version = "0.4" }
pixels = "0.9"
winit = "0.26"
winit_input_helper = "0.12"